Adding a page and functionality to delete a shape

--- a/client/actions.html
+++ b/client/actions.html
@@ -29,7 +29,7 @@
         <div class="flex-1 box-center text-3d title-text">Choose one of the actions:</div>
         <div class="d-flex flex-1 flex-column gap-4">
             <a href="./shapes.html" class="floating-button w-75 position-center button-text">Set shape</a>
-            <a href="" class="floating-button w-75 position-center button-text">Delete shape</a>
+            <a href="./delete.html" class="floating-button w-75 position-center button-text">Delete shape</a>
             <a href="./show.html" class="floating-button w-75 position-center button-text">Show screen</a>
             <a href="./index.html" class="floating-button w-75 position-center button-text">Go back to the main page</a>
         </div>
