--- a/client/delete.html
+++ b/client/delete.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Available shapes</title>
+    <title>Delete shape</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +17,20 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <script type="module" src="./js/shape.js"></script>
+    <script type="module">
+        import { displayListOfShapesToDelete } from "./js/shape.js";
+        window.displayListOfShapesToDelete = displayListOfShapesToDelete;
+    </script>
 </head>
 
-<body>
+<body onload="displayListOfShapesToDelete();">
+    <div class="d-flex flex-column bg-light overflow-y-scroll" style="height: 100vh;">
+        <div class="flex-1 box-center text-3d title-text">Select the shape to delete</div>
+        <div class="d-flex flex-2 flex-column justify-content-center gap-3" id="wrapper">
+            <a href="./actions.html" class="floating-button w-75 position-center button-text button-back" id="back">
+                Go to available
+                actions</a>
+        </div>
+    </div>
 </body>
