--- a/client/show.html
+++ b/client/show.html
@@ -25,12 +25,14 @@
 </head>
 
 <body onload="getAndDrawShapes();">
-    <div class="d-flex flex-column bg-light overflow-y-scroll gap-3" style="height: 100vh;">
+    <div class="d-flex flex-column bg-light gap-3" style="height: 100%; min-height: 100vh;">
         <div class="flex-2 box-center text-3d title-text">Show screen</div>
 
-        <div class="text-center scroll">
+        <div class="d-flex justify-content-center scroll">
             <canvas id="canvas" width="800px" height="800px"></canvas>
         </div>
+
+        <div class="d-flex flex-2 flex-column justify-content-center gap-3" id="wrapper"></div>
 
         <div class="d-flex flex-1 m-3">
             <a href="./actions.html" class="floating-button w-75 position-center button-text button-back">Go to available
