--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
-    <div class="d-flex flex-column bg-light overflow-y-scroll" style="height: 100vh;">
-        <div class="flex-1 box-center text-3d title-text">Pseudo-scene of geometric shapes</div>
-        <div class="d-flex flex-1 flex-column justify-content-center">
-            <a href="./actions.html" class="floating-button w-75 position-center button-text">Go to available actions</a>
+<body class="bg-light min-vh-100">
+    <div class="d-flex flex-column min-vh-100">
+        <div class="text-3d title-text">Pseudo-scene of geometric shapes</div>
+        <div class="flex-1 d-flex align-items-center justify-content-center">
+            <a href="./actions.html" class="d-block w-75 floating-button button-text">Go to available actions</a>
         </div>
     </div>
 </body>
