--- a/client/delete.html
+++ b/client/delete.html
@@ -24,11 +24,11 @@
     </script>
 </head>
 
-<body onload="displayListOfShapesToDelete();">
-    <div class="d-flex flex-column bg-light overflow-y-scroll" style="height: 100vh;">
-        <div class="flex-1 box-center text-3d title-text">Select the shape to delete</div>
-        <div class="d-flex flex-2 flex-column justify-content-center gap-3" id="wrapper">
-            <a href="./actions.html" class="floating-button w-75 position-center button-text button-back" id="back">
+<body class="bg-light min-vh-100" onload="displayListOfShapesToDelete();">
+    <div class="d-flex flex-column min-vh-100">
+        <div class="text-3d title-text">Select the shape to delete</div>
+        <div class="flex-1 d-flex flex-column align-items-center justify-content-center gap-4 m-3" id="wrapper">
+            <a href="./actions.html" class="d-block w-75 floating-button button-text button-back" id="back">
                 Go to available
                 actions</a>
         </div>
