--- a/client/show.html
+++ b/client/show.html
@@ -24,18 +24,18 @@
     </script>
 </head>
 
-<body onload="getAndDrawShapes();">
-    <div class="d-flex flex-column bg-light gap-3" style="height: 100%; min-height: 100vh;">
-        <div class="flex-2 box-center text-3d title-text">Show screen</div>
+<body class="bg-light min-vh-100" onload="getAndDrawShapes();">
+    <div class="d-flex flex-column min-vh-100">
+        <div class="text-3d title-text">Show screen</div>
 
-        <div class="d-flex justify-content-center scroll">
-            <canvas id="canvas" width="800px" height="800px"></canvas>
+        <div class="d-flex justify-content-center">
+            <canvas id="canvas" class="max-vh-50"></canvas>
         </div>
 
-        <div class="d-flex flex-2 flex-column justify-content-center gap-3" id="wrapper"></div>
+        <div class="flex-1 d-flex flex-column align-items-center justify-content-center gap-4 m-3" id="wrapper"></div>
 
-        <div class="d-flex flex-1 m-3">
-            <a href="./actions.html" class="floating-button w-75 position-center button-text button-back">Go to available
+        <div class="d-flex align-items-center justify-content-center m-3">
+            <a href="./actions.html" class="d-block w-75 floating-button button-text button-back">Go to available
                 actions</a>
         </div>
     </div>
