Fixed layot for actions

--- a/client/actions.html
+++ b/client/actions.html
@@ -21,7 +21,7 @@
 
 <body class="bg-light min-vh-100">
     <div class="d-flex flex-column min-vh-100">
-        <div class="text-3d title-text">Choose one of the actions:</div>
+        <div class="flex-1 d-flex justify-content-center align-items-center text-3d title-text ">Choose one of the actions:</div>
         <div class="flex-1 d-flex flex-column align-items-center justify-content-center gap-4 m-3">
             <a href="./shapes.html" class="d-block w-75 floating-button button-text">Set shape</a>
             <a href="./delete.html" class="d-block w-75 floating-button button-text">Delete shape</a>
