--- a/client/delete.html
+++ b/client/delete.html
@@ -24,7 +24,7 @@
     </script>
 </head>
 
-<body class="bg-light min-vh-100" onload="displayListOfShapesToDelete();">
+<body class="bg-light min-vh-100" onload="displayListOfShapesToDelete('wrapper', 'back');">
     <div class="d-flex flex-column min-vh-100">
         <div class="text-3d title-text">Select the shape to delete</div>
         <div class="flex-1 d-flex flex-column align-items-center justify-content-center gap-4 m-3" id="wrapper">
