--- a/client/show.html
+++ b/client/show.html
@@ -24,7 +24,7 @@
     </script>
 </head>
 
-<body class="bg-light min-vh-100" onload="getAndDrawShapes();">
+<body class="bg-light min-vh-100" onload="getAndDrawShapes('canvas', 'wrapper');">
     <div class="d-flex flex-column min-vh-100">
         <div class="text-3d title-text">Show screen</div>
 
@@ -34,7 +34,7 @@
 
         <div class="flex-1 d-flex flex-column align-items-center justify-content-center gap-4 m-3" id="wrapper"></div>
 
-        <div class="d-flex align-items-center justify-content-center m-3">
+        <div class="d-flex flex-1 align-items-center justify-content-center m-3">
             <a href="./actions.html" class="d-block w-75 floating-button button-text button-back">Go to available
                 actions</a>
         </div>
